--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,6 +5,8 @@
 <table>
   <thead>
     <tr>
+      <th>Subject</th>
+      <th>Lecturer</th>
       <th>Description</th>
       <th colspan="3"></th>
     </tr>
@@ -13,6 +15,8 @@
   <tbody>
     <% @courses.each do |course| %>
       <tr>
+        <td><%= course.subject.name %></td>
+        <td><%= course.lecturer.title + ' ' + course.lecturer.name %>
         <td><%= course.description %></td>
         <td><%= link_to 'Show', course %></td>
         <td><%= link_to 'Edit', edit_course_path(course) %></td>
