--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -7,16 +7,15 @@
     <tr>
       <th>Name</th>
       <th>Study path</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @subjects.each do |subject| %>
       <tr>
-        <td><%= subject.name %></td>
+        <td><%= link_to subject.name, subject %></td>
         <td><%= subject.study_path %></td>
-        <td><%= link_to 'Show', subject %></td>
         <td><%= link_to 'Edit', edit_subject_path(subject) %></td>
         <td><%= link_to 'Destroy', subject, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
