--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,30 +2,31 @@
 
 <h1>Courses</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Subject</th>
-      <th>Lecturer</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @courses.each do |course| %>
+<div class="table-responsive-lg mt-4">
+  <table class="table">
+    <thead class="thead-dark">
       <tr>
-        <td><%= course.subject.name %></td>
-        <td><%= course.lecturer.title + ' ' + course.lecturer.name %>
-        <td><%= course.description %></td>
-        <td><%= link_to 'Show', course %></td>
-        <td><%= link_to 'Edit', edit_course_path(course) %></td>
-        <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Subject</th>
+        <th>Lecturer</th>
+        <th>Description</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
-
+    </thead>
+  
+    <tbody>
+      <% @courses.each do |course| %>
+        <tr>
+          <td><%= course.subject.name %></td>
+          <td><%= course.lecturer.title + ' ' + course.lecturer.name %>
+          <td><%= course.description %></td>
+          <td><%= link_to 'Show', course %></td>
+          <td><%= link_to 'Edit', edit_course_path(course) %></td>
+          <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 <br>
 
 <%= link_to 'New Course', new_course_path %>
