--- a/app/assets/stylesheets/subjects.scss
+++ b/app/assets/stylesheets/subjects.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Subjects controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.login {
+  width: 100px;
+  height: 48px;
+  float: right;
+}
