--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -10,5 +10,12 @@
   <%= @subject.study_path %>
 </p>
 
+<p>
+  <% @subject.courses.each do |course| %>
+    <p><strong>Lecturer:</strong> <%= course.lecturer.title %> <%= course.lecturer.name %></p>
+    <p><strong>Description:</strong> <%= course.description %></p>
+  <% end %>
+</p>
+
 <%= link_to 'Edit', edit_subject_path(@subject) %> |
 <%= link_to 'Back', subjects_path %>
