--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -11,6 +11,11 @@
 </p>
 
 <p>
+  <strong>Semester:</strong>
+  <%= @subject.semester_info %>
+</p>
+
+<p>
   <% @subject.courses.each do |course| %>
     <p><strong>Lecturer:</strong> <%= course.lecturer.title %> <%= course.lecturer.name %></p>
     <p><strong>Description:</strong> <%= course.description %></p>
