--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,19 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="container">
+
+    <% if notice.present? %>
+    <aside class="alert alert-info">
+    <%= notice %>
+    </aside>
+    <% end %>
+    <% if alert.present? %>
+    <aside class="alert alert-danger">
+    <%= alert %>
+    </aside>
+    <% end %>
     <%= yield %>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    
   </body>
 </html>
