--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,23 +1,7 @@
-<div class="container m-3">
-  <header class="row">
-    <div class="col-sm-4">
-      <div class="row" >IMI</div>
-      <div class="row" >CourseR</div>
-    </div>
-    <div class="col-sm-4 input-group stylish-input-group">
-        <input type="text" class="form-control"  placeholder="Search" >
-        <span class="input-group-addon">
-                <i class="fa fa-search" aria-hidden="true"></i>
-        </span>
-    </div>
-    <div class="col-sm-4">
-      <button class="login btn btn-success actions">Login</button>
-    </div>
-  </header>
-
+<div class="container my-3">
   <h1 class="mt-5">Subjects</h1>
 
-   <div class="btn-group mt-4 mb-4">
+   <div class="btn-group my-4">
     <button type="button" class="btn btn-default">Semester 1</button>
     <button type="button" class="btn btn-default">Semester 2</button>
     <button type="button" class="btn btn-default">Semester 3</button>
@@ -27,7 +11,8 @@
     <button type="button" class="btn btn-default">AWE</button>
   </div> 
 
-  <table class="table table-responsive-lg table-bordered table-hover mt-4">
+  <div class="row">
+  <table class="table table-responsive-lg table-bordered table-hover mt- col-1">
     <thead class="thead-dark">
       <tr>
         <th>Name</th>
@@ -50,6 +35,7 @@
       </section>
     </tbody>
   </table>
+  </div>
 
   <br>
 
