--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,22 +1,23 @@
 <div class="container my-3">
-  <section class="search-form">
-    <%= form_for :subjects, method: :get do |f| %>
-      <div class="input-group input-group-lg">
-        <%= label_tag :keywords, nil, class: "sr-only" %>
-        <%= text_field_tag :keywords, nil,
-          placeholder: "Name, Study Path or Semester",
-            class: "form-control input-lg" %>
-        <span class="input-group-btn">
-          <%= submit_tag "Find Subjects",
-            class: "btn btn-primary btn-lg" %>
-        </span>
-      </div>
-    <% end %>
-  </section>
+  <div class="row justify-content-md-center">
+    <section class="search-form col-lg-5">
+      <%= form_for :subjects, method: :get do |f| %>
+        <div class="input-group input-group-lg">
+          <%= label_tag :keywords, nil, class: "sr-only" %>
+          <%= text_field_tag :keywords, nil,
+              placeholder: "Type in a subject name...",
+              class: "form-control input-lg" %>
+          <%= button_tag(:class => "input-group-addon") do %>
+            <i class="fa fa-search" aria-hidden="true"></i>
+          <% end %>
+        </div>
+      <% end %>
+    </section>
+  </div>
   <h1 class="mt-5">Subjects</h1>
 
    <div class="btn-group my-4">
-     <button type="button" class="btn btn-default"><%= link_to 'All', subjects_path()%></button>
+    <button type="button" class="btn btn-default"><%= link_to 'All', subjects_path()%></button>
     <button type="button" class="btn btn-default"><%= link_to 'Semester 1', subjects_path(:semester_info => '1')%></button>
     <button type="button" class="btn btn-default"><%= link_to 'Semester 2', subjects_path(:semester_info => '2')%></button>
     <button type="button" class="btn btn-default"><%= link_to 'Semester 3', subjects_path(:semester_info => '3')%></button>
@@ -33,7 +34,7 @@
         <tr>
           <th>Name</th>
           <th>Study path</th>
-          <th colspan="2"></th>
+          <th>Semester type</th>
         </tr>
       </thead>
 
@@ -42,6 +43,7 @@
           <tr>
             <td><%= link_to subject.name, subject %></td>
             <td><%= subject.study_path %></td>
+            <td><%= subject.semester_info %></td>
           </tr>
         <% end %>
       </tbody>
