A3-rspec: Add tests for search functionality.

--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -7,7 +7,7 @@
           <%= text_field_tag :keywords, nil,
               placeholder: "Type in a subject name...",
               class: "form-control input-lg" %>
-          <%= button_tag(:class => "input-group-addon") do %>
+          <%= button_tag(:class => "input-group-addon", :id => "submit-keywords") do %>
             <i class="fa fa-search" aria-hidden="true"></i>
           <% end %>
         </div>
