--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
 
   <div class="form-group">
     <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, class: "form-control" %>
+    <%= f.text_field :name, autofocus: true, class: "form-control", onchange: "validateLecturer()" %>
   </div>
 
   <div class="form-group">
@@ -34,8 +34,42 @@
 </br>
 
   <div class="actions">
-    <%= f.submit "Sign up", class: "btn btn-primary btn-lg" %>
+    <%= f.submit "Sign up", class: "btn btn-primary btn-lg", id: "submit_registration" %>
   </div>
 <% end %>
+
+<script>
+  validateLecturer = () => {
+    $('#lecturer_status').remove();
+    const lecturer = $('#user_name').val();
+    const inputSplit = lecturer.trim().split(' ');
+    if (inputSplit.length !== 2) {
+      return $('<span style="color:red" id="lecturer_status">Invalid format. Please provide first and last name.</span>').insertAfter('#user_name');
+    }
+    $('#submit_registration').prop('disabled', true);
+    $('<span id="lecturer_loading">Checking Lecturer...</span>').insertAfter('#user_name');
+    $.ajax({
+      url: `https://cors-anywhere.herokuapp.com/https://lsf.htw-berlin.de/qisserver/rds?state=wsearchv&search=7&purge=y&moduleParameter=person/person&personal.vorname=${inputSplit[0]}&personal.nachname=${inputSplit[1]}&P_start=0&P_anzahl=10&_form=display`,
+    })
+      .done((html) => {
+        let validLecturer = false;
+        $(html).find('.ver').each(function() {
+          let linkText = $(this).text();
+          const regex = new RegExp(`\\b(${inputSplit[0]})\\s+(${inputSplit[1]})\\b`, 'i');
+          if (regex.exec(linkText) !== null) {
+            validLecturer = true;
+          }
+        });
+        $('#lecturer_loading').remove();
+        if (validLecturer) {
+          $('#submit_registration').prop('disabled', false);
+        } else {
+          const error = `Lecturer ${lecturer} not found.`;
+          $('#submit_registration').prop('disabled', true);
+          $(`<span style="color: red" id="lecturer_status">${error}</span>`).insertAfter('#user_name');
+        }
+      });
+  };
+</script>
 
 <%= render "devise/shared/links" %>
