--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,12 +5,12 @@
 
   <div class="form-group">
     <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, class: "form-control", onchange: "validateLecturer()" %>
+    <%= f.text_field :name, autofocus: true, class: "form-control", onchange: "validateName()" %>
   </div>
 
   <div class="form-group">
     <%= f.label :role %><br />
-    <%= f.text_field :role, autofocus: true, class: "form-control" %>
+    <%= f.text_field :role, autofocus: true, class: "form-control",onchange: "validateLecturer()" %>
   </div>
 
   <div class="form-group">
@@ -39,36 +39,58 @@
 <% end %>
 
 <script>
-  validateLecturer = () => {
+  validateName = () => {
     $('#lecturer_status').remove();
-    const lecturer = $('#user_name').val();
+    const lecturer = $('#user_name').val().toLowerCase();
     const inputSplit = lecturer.trim().split(' ');
     if (inputSplit.length !== 2) {
+      $('#submit_registration').prop('disabled', true);
       return $('<span style="color:red" id="lecturer_status">Invalid format. Please provide first and last name.</span>').insertAfter('#user_name');
     }
+  }
+
+  validateLecturer = () => {
+    $('#lecturer_status').remove();
+    const lecturer = $('#user_name').val().toLowerCase();
+    const role = $('#user_role').val().toLowerCase();
+    const inputSplit = lecturer.trim().split(' ');
+
     $('#submit_registration').prop('disabled', true);
-    $('<span id="lecturer_loading">Checking Lecturer...</span>').insertAfter('#user_name');
-    $.ajax({
-      url: `https://cors-anywhere.herokuapp.com/https://lsf.htw-berlin.de/qisserver/rds?state=wsearchv&search=7&purge=y&moduleParameter=person/person&personal.vorname=${inputSplit[0]}&personal.nachname=${inputSplit[1]}&P_start=0&P_anzahl=10&_form=display`,
-    })
-      .done((html) => {
-        let validLecturer = false;
-        $(html).find('.ver').each(function() {
-          let linkText = $(this).text();
-          const regex = new RegExp(`\\b(${inputSplit[0]})\\s+(${inputSplit[1]})\\b`, 'i');
-          if (regex.exec(linkText) !== null) {
-            validLecturer = true;
+    if (role == "lecturer")
+    {
+      $('<span id="lecturer_loading">Checking Lecturer...</span>').insertAfter('#user_name');
+      $.ajax({
+        url: `https://cors-anywhere.herokuapp.com/https://lsf.htw-berlin.de/qisserver/rds?state=wsearchv&search=7&purge=y&moduleParameter=person/person&personal.vorname=${inputSplit[0]}&personal.nachname=${inputSplit[1]}&P_start=0&P_anzahl=10&_form=display`,
+      })
+        .done((html) => {
+          let validLecturer = false;
+          $(html).find('.ver').each(function() {
+            let linkText = $(this).text();
+            const regex = new RegExp(`\\b(${inputSplit[0]})\\s+(${inputSplit[1]})\\b`, 'i');
+            if (regex.exec(linkText) !== null) {
+              validLecturer = true;
+            }
+          });
+          $('#lecturer_loading').remove();
+          if (validLecturer) {
+            $('#submit_registration').prop('disabled', false);
+          } else {
+            const error = `Lecturer ${lecturer} not found.`;
+            $('#submit_registration').prop('disabled', true);
+            $(`<span style="color: red" id="lecturer_status">${error}</span>`).insertAfter('#user_name');
           }
         });
-        $('#lecturer_loading').remove();
-        if (validLecturer) {
-          $('#submit_registration').prop('disabled', false);
-        } else {
-          const error = `Lecturer ${lecturer} not found.`;
-          $('#submit_registration').prop('disabled', true);
-          $(`<span style="color: red" id="lecturer_status">${error}</span>`).insertAfter('#user_name');
-        }
-      });
+    }      
+    else if (role == 'student')
+    {
+      $('#submit_registration').prop('disabled', false);      
+    }
+
+    else
+    {
+      $(`<span style="color: red" id="lecturer_status">Please enter a valid role (Lecturer/Student)</span>`).insertAfter('#user_role');
+      
+    }
   };
 </script>
 
