--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,5 +1,10 @@
 <h1>New Course</h1>
 
-<%= render 'form', course: @course %>
+<%if @form_type==='awe'%>
+	<%= render 'form_awe', course: @course, lecturer: @lecturer, subject: @subject %>
+<%else%>
+	<%= render 'form_awe', course: @course %>
+<%end%>
+
 
 <%= link_to 'Back', courses_path %>
