--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -16,11 +16,19 @@
     <%= form.text_area :description, id: :course_description %>
   </div>
 
-  <div class="field">
-    <%= form.label :lecturer %><br />
-    <%= form.select :lecturer_id, options_from_collection_for_select(Lecturer.all, "id", "name"),
-      :prompt => "Select lecturer" %>
-  </div>
+  <% if @lecturer %>
+    <div class="field">
+      <%= form.label :lecturer %><br />
+      <%= form.select :lecturer_id, options_from_collection_for_select(@lecturer, "id", "name"),
+        :prompt => "Select lecturer" %>
+    </div>
+  <%else%>
+    <div class="field">
+      <%= form.label :lecturer %><br />
+      <%= form.select :lecturer_id, options_from_collection_for_select(Lecturer.all, "id", "name"),
+        :prompt => "Select lecturer" %>
+    </div>
+  <% end %>
 
   <div class="field">
     <%= form.label :subject %><br />
