--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,10 +1,6 @@
 <h1>New Course</h1>
 
-<%if @form_type==='awe'%>
-	<%= render 'form_awe', course: @course, lecturer: @lecturer, subject: @subject %>
-<%else%>
-	<%= render 'form_awe', course: @course %>
-<%end%>
+<%= render 'form', course: @course %>
 
 
 <%= link_to 'Back', courses_path %>
