--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -30,11 +30,19 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <% if @subject %>
+    <div class="field">
+      <%= form.label :subject %><br />
+      <%= form.select :subject_id, options_from_collection_for_select(@subject, "id", "name"),
+        :prompt => "Select subject" %>
+    </div>
+  <%else%>
+    div class="field">
     <%= form.label :subject %><br />
     <%= form.select :subject_id, options_from_collection_for_select(Subject.all, "id", "name"),
       :prompt => "Select subject" %>
   </div>
+  <% end %>
 
   <div class="actions">
     <%= form.submit %>
