--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -26,6 +26,6 @@
   </div>
 
   <% if @isVisible %>
-    <%= link_to 'New Course', new_course_path %>
+    <%= link_to 'New Course', new_course_path(:subject_id => @subject) %>
   <% end %>
 </div>
